--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -350,6 +350,10 @@
       <div class="row row-profile row-friends">
         <div class="row-title">
           <div data-lid="p_friends_title" class="row-title-text">Tout le monde est sur meefore</div>
+          <div class="invite-friends">
+            <button data-lid="p_button_invite" class="theme-btn btn-invite-friends"></button>
+            <i class="icon icon-invite-friends icon-plus"></i>
+          </div>
         </div>
         <div class="row-subtitle">
           <div data-lid="p_friends_subtitle" class="row-subtitle-text etiquette">Tes amis Facebook sont tous sur meefore. Il en manque ? Invites-les et gagne des points!</div>
@@ -359,9 +363,7 @@
           <h3 data-lid="p_friends_nofriends" >Vous n'avez aucun ami Facebook inscrit. Participer à des before risque d'être compliqué...</h3>
            <!-- Dynamically loaded -->
         </div>
-        <div class="row-body-sub">
-          <button data-lid="p_button_invite" class="theme-btn btn-invite-friends">Invite tes amis</button>
-        </div>
+
       </div>
 
       <!-- Questionnaire à là OKC  -->
