--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -360,6 +360,10 @@
       <div class="row row-profile row-friends">
         <div class="row-title">
           <div data-lid="p_friends_title" class="row-title-text">Tout le monde est sur meefore</div>
+          <div class="invite-friends">
+            <button data-lid="p_button_invite" class="theme-btn btn-invite-friends"></button>
+            <i class="icon icon-invite-friends icon-plus"></i>
+          </div>
         </div>
         <div class="row-subtitle">
           <div data-lid="p_friends_subtitle" class="row-subtitle-text etiquette">Tes amis Facebook sont tous sur meefore. Il en manque ? Invites-les et gagne des points!</div>
