--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -15,7 +15,7 @@
   <meta property="og:url"         content="http://www.meefore.com/home" />
   <meta property="og:image"       content="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp1.jpg" />
   <meta property="og:app_id"      content="1638104993142222" />
-  
+
   <meta property="og:description" content="Meefore est le premier site qui permet à des groupes
                                            d'amis de faire des before ensemble avant d'aller en soirée.
                                            Connectez-vous entre amis, et 
@@ -362,6 +362,10 @@
       <div class="row row-profile row-friends">
         <div class="row-title">
           <div data-lid="p_friends_title" class="row-title-text">Tout le monde est sur meefore</div>
+          <div class="invite-friends">
+            <button data-lid="p_button_invite" class="theme-btn btn-invite-friends"></button>
+            <i class="icon icon-invite-friends icon-plus"></i>
+          </div>
         </div>
         <div class="row-subtitle">
           <div data-lid="p_friends_subtitle" class="row-subtitle-text etiquette">Tes amis Facebook sont tous sur meefore. Il en manque ? Invites-les et gagne des points!</div>
