--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -199,6 +199,16 @@ margin: 10px 0;
 }
 
 .hero-header {font-family: Pacifico;text-align: center;color: white;line-height: 50px;/* text-transform: uppercase; *//* letter-spacing: .5px; */font-weight: bold;font-weight: normal;font-size: 40px;}
+.hero-header-sub {
+color: white;
+margin-top: 25px;
+font-size: 18px;
+font-family: Karla;
+text-shadow: 1px 1px 1px #6B6B6B;
+font-family: 'Coming soon';
+text-align: center;
+line-height: 31px;
+}
 
 .hero-subheader {text-align: center;font: normal 28px 'Alegreya Sans Sc';text-shadow: 0 1px 1px #575757;color: white;text-transform: none;margin-top: 25px;letter-spacing: -.5px;line-height: 45px;}
 .hero-subheader span {
