--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -16,15 +16,13 @@
   <meta property="og:image"       content="http://res.cloudinary.com/radioreve/image/upload/v1445867671/lp1.jpg" />
   <meta property="og:app_id"      content="1509405206012202" />
   
-  <meta property="og:description" content="Meefore est le premier site qui permet à des groupes
-                                           d'amis de faire des before ensemble avant d'aller en soirée.
-                                           Connectez-vous entre amis, et 
-                                           faîtes des rencontres dès ce soir!"/>
+  <meta property="og:description" content="Meefore est le 1er site qui vous permet de participer à des before avec les personnes
+                                           qui vont aux mêmes soirées que vous. Vous aimez sortir et faire de nouvelles rencontres?
+                                           Connectez-vous dès maintenant!"/>
 
-  <meta name="description"        content="Meefore est le premier site qui permet à des groupes
-                                           d'amis de faire des before ensemble avant d'aller en soirée.
-                                           Connectez-vous entre amis, et 
-                                           faîtes des rencontres dès ce soir!"/>
+  <meta name="description"        content="Meefore est le 1er site qui vous permet de participer à des before avec les personnes
+                                           qui vont aux mêmes soirées que vous. Vous aimez sortir et faire de nouvelles rencontres?
+                                           Connectez-vous dès maintenant!"/>
 
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Londrina+Solid' rel='stylesheet' type='text/css'>
@@ -119,6 +117,9 @@
         <h1 data-lid="lp_subtitle" class="hero-header">
           Faîtes des rencontres avant d'aller en soirée
         </h1>
+         <h2 data-lid="lp_subtitle_sub" class="hero-header-sub">
+          Meefore est le 1er site qui vous permet de participer à des before avec les personnes qui vont aux mêmes soirées que vous.
+        </h2>
         <div id="facebook_connect">
           <i class="icon icon-facebook"></i>
           <span data-lid="lp_conn_button">Connexion</span>
@@ -352,7 +353,7 @@
         <div class="row-title">
           <div data-lid="p_friends_title" class="row-title-text">Tout le monde est sur meefore</div>
           <div class="invite-friends">
-            <button data-lid="p_button_invite" class="theme-btn btn-invite-friends"></button>
+            <button data-lid="app_button_invite" class="theme-btn btn-invite-friends"></button>
             <i class="icon icon-invite-friends icon-plus"></i>
           </div>
         </div>
