--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -264,6 +264,20 @@
       </div>
     </section>
 
+    
+    <!-- Party Wrap -->
+    <section id="partiesWrap" class="none centered">
+    
+    <!-- Next party -->  
+    <div class="row row-parties row-next-party">
+        <div class="next-party-headlines"></div>
+        <div class="next-party-create-meefore"></div>
+    </div>
+    <!-- End next party-->
+
+    </section>
+    <!-- End Party Wrap -->
+
     <section id="profileWrap" class="none centered">
 
       <!-- Titre et sous-titre  -->
