--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -106,6 +106,7 @@ left: 1px;
     margin-top: 5px;
     padding: 15px;
     font-size: 11px;
+    position: static;
 }
 .welcome .invite-friends:hover {
     background: #617BB4;
