--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -711,7 +711,7 @@
   <script src="js/src/events/lj-events-tabview.js"></script>
   <script src="js/src/events/lj-events-create.js"></script>
   <script src="js/src/events/lj-events-map.js"></script>
-  <script src="js/src/party/lj-party.js"></script>
+  <script src="js/src/admin/lj-admin.js"></script>
   <script src="js/src/typeaheads/lj-typeaheads.js"></script>
   <script src="js/src/tour/lj-tour.js"></script>
   <script src="js/src/landing/lj-landing.js"></script>
