--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?66793258');
-  src: url('../font/fontello.eot?66793258#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?66793258') format('woff'),
-       url('../font/fontello.ttf?66793258') format('truetype'),
-       url('../font/fontello.svg?66793258#fontello') format('svg');
+  src: url('../font/fontello.eot?2664594');
+  src: url('../font/fontello.eot?2664594#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?2664594') format('woff'),
+       url('../font/fontello.ttf?2664594') format('truetype'),
+       url('../font/fontello.svg?2664594#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?66793258#fontello') format('svg');
+    src: url('../font/fontello.svg?2664594#fontello') format('svg');
   }
 }
 */
@@ -153,3 +153,5 @@
 .icon-left-bold:before { content: '\e860'; } /* '' */
 .icon-right:before { content: '\e861'; } /* '' */
 .icon-left:before { content: '\e862'; } /* '' */
+.icon-clipboard:before { content: '\e863'; } /* '' */
+.icon-list:before { content: '\e864'; } /* '' */
