--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -94,11 +94,20 @@ left: 1px;
 	color: white;
 }
 
-.lintro-subtext {
+.lintro-subtext, .lintro-exit {
 	font-size: 13px;
 	color: #808080;
 	font-family: 'karla';
 	margin-top: 12px;
+	transition: all .2s ease-in-out;
+}
+.lintro-exit {
+	width: 200px;
+	margin: 3px auto 0;
+}
+.lintro-exit:hover {
+	cursor: pointer;
+	color: #ccc;
 }
 
 .welcome .invite-friends {
