--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -51,6 +51,7 @@
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/modal.css">
   <link rel="stylesheet" href="/css/intro.css">
+  <link rel="stylesheet" href="/css/notifications.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.flat.css">
@@ -232,8 +233,11 @@
           <span class="underlay"></span>
           <span class="bubble filtered"></span>
         </li>
-        <li id="search" class="menu-item icon icon-search">
+        <li id="notifications" class="menu-item icon icon-list">
           <span class="underlay"></span>
+          <span class="bubble filtered"></span>
+        </li>
+        <li id="search" class="menu-item icon icon-search">
           <span class="bubble filtered"></span>
           <div id="searchbar" class=""><input data-lid="h_search_placeholder" type="text" class="search-input"></div>
         </li>
@@ -737,6 +741,7 @@
   <script src="js/src/languages/lj-languages.js"></script>
   <script src="js/src/analytics/lj-analytics.js"></script>
   <script src="js/src/intro/lj-intro.js"></script>
+  <script src="js/src/notifications/lj-notifications.js"></script>
   <script src="js/src/init/lj-init.js"></script>
   <script src="js/src/lj-junk.js"></script>
 
