--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -50,6 +50,7 @@
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/modal.css">
   <link rel="stylesheet" href="/css/intro.css">
+  <link rel="stylesheet" href="/css/notifications.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.flat.css">
@@ -725,6 +726,7 @@
   <script src="js/src/languages/lj-languages.js"></script>
   <script src="js/src/analytics/lj-analytics.js"></script>
   <script src="js/src/intro/lj-intro.js"></script>
+  <script src="js/src/notifications/lj-notifications.js"></script>
   <script src="js/src/init/lj-init.js"></script>
   <script src="js/src/lj-junk.js"></script>
 
