--- a/public/css/search.css
+++ b/public/css/search.css
@@ -136,11 +136,11 @@ align-items: center;
 }
 
 .search-result-default:hover {
-   background-color: rgba(0, 0, 0, 0.2);
+    background-color: #f9f9f9;
 }
 
-.search-result-friend:hover {
-    background-color: #f9f9f9;
+.search-results-users .search-result-default:hover {
+   background-color: rgba(0, 0, 0, 0.2);
 }
  
 .search-result-default:last-of-type {
@@ -172,19 +172,29 @@ align-items: center;
 
 .search-result-name strong {
    font-weight: bolder;
-   color: #383838;
 }
 
 .search-result-hashtags {
    font-size: 12px;
    float: right;
 }
-.search-result-hashtags--users {
+
+.search-results-friends .search-result-name--users {
+    color: #555;
 }
 
-.search-result-name--users {
+.search-results-users .search-result-name--users {
     color: white;
 }
+
+.search-results-friends .search-result-name--users strong {
+    color: black;
+}
+
+.search-results-users .search-result-name--users strong {
+    color: #e94f6a;
+}
+
 
 .search-result-name--users strong {
     color: #e94f6a;
@@ -256,6 +266,10 @@ align-items: center;
 .search-result-default:last-of-type {
 }
 
+.search-results-friends .search-result-users {
+    color: #555;
+}
+
 .place-result {
 }
 
@@ -304,6 +318,7 @@ align-items: center;
 }
 
 .search-result-users {
+  /* border: 1px solid #1E1E1E; */
 }
 
 .search-result-party-places {
