--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -100,3 +100,5 @@
 .icon-left:before { content: '\e862'; } /* '' */
 .icon-clipboard:before { content: '\e863'; } /* '' */
 .icon-list:before { content: '\e864'; } /* '' */
+.icon-user-times:before { content: '\e865'; } /* '' */
+.icon-bell-alt:before { content: '\e866'; } /* '' */
