--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -221,7 +221,7 @@
           <span class="underlay"></span>
           <span class="bubble filtered"></span>
         </li>
-        <li id="notifications" class="menu-item icon icon-list">
+        <li id="notifications" class="menu-item icon icon-bell-alt">
           <span class="underlay"></span>
           <span class="bubble filtered"></span>
         </li>
