--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -438,7 +438,7 @@ right: 0;
    min-width: 80px;
    display: inline-block;
    background-color: white;
-   margin: 0 3px;
+   margin: 3px;
    border: 1px solid #eee;
    width: 83px;
    text-align: center;
