--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -233,7 +233,7 @@
           <span class="underlay"></span>
           <span class="bubble filtered"></span>
         </li>
-        <li id="notifications" class="menu-item icon icon-list">
+        <li id="notifications" class="menu-item icon icon-bell-alt">
           <span class="underlay"></span>
           <span class="bubble filtered"></span>
         </li>
@@ -726,6 +726,7 @@
   <script src="js/src/events/lj-events-filters.js"></script>
   <script src="js/src/events/lj-events-preview.js"></script>
   <script src="js/src/events/lj-events-tabview.js"></script>
+  <script src="js/src/events/lj-events-mapview.js"></script>
   <script src="js/src/events/lj-events-create.js"></script>
   <script src="js/src/events/lj-events-map.js"></script>
   <script src="js/src/admin/lj-admin.js"></script>
