--- a/public/css/notifications.css
+++ b/public/css/notifications.css
@@ -60,7 +60,7 @@ background: #373737;
 }
 .notification__icon {
 	font-size: 18px;
-	color: #e94f6a;
+	color: #616161;
 }
 .notification__date {
 	color: #ccc;
