--- a/public/css/media.css
+++ b/public/css/media.css
@@ -1,5 +1,6 @@
 @media screen and ( min-width: 1024px ) {
-   .m-loaderWrap {
+   .m-loaderWrap,
+   .m-warning {
       display: none!important;
    }
 }
