--- a/public/css/notifications.css
+++ b/public/css/notifications.css
@@ -1,10 +1,8 @@
 
 /* Notifications styles */
 
-.notification-active {
-color: #e94f6a;
-background: #373737;
-}
+.notification-active {color: #FFFFFF;
+background: #373737;}
  
 .notifications-panel {
 	width: 668px;
@@ -83,7 +81,10 @@ background: #373737;
 	margin-top: 2px;
 }
 .notification-message__group-name {
-	color: rgb(185, 255, 179);
+	color: rgb(139, 255, 233);
+	padding: 2px 4px;
+	background: #3D3D3D;
+	border-radius: 3px;
 }
 .notification-message__friend-name {
 	color: #B6FFAF;
