--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1836,3 +1836,16 @@ p {
 	color: white;
 	z-index: 100000000;
 }
+
+.m-warning {
+	background: rgba(0, 0, 0, 0.79);
+	padding: 20px;
+	color: white;
+	font-size: 12px;
+	text-align: center;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	z-index: 100;
+	line-height: 20px;
+}
