--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -90,6 +90,7 @@
   <div class="curtain"></div>
   <div class="modal-curtain"></div>
   <div class="modal-container super-centered none"><div class="modal-container-body"></div></div>
+  <div class="m-warning none" data-lid="app_mobile_warning"></div>
 
 
   <!-- Landing Page Begin -->
