--- a/public/css/search.css
+++ b/public/css/search.css
@@ -318,7 +318,7 @@ align-items: center;
 }
 
 .search-result-users {
-  /* border: 1px solid #1E1E1E; */
+  border-bottom: 1px solid #272727;
 }
 
 .search-result-party-places {
