--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -51,6 +51,7 @@
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/modal.css">
   <link rel="stylesheet" href="/css/intro.css">
+  <link rel="stylesheet" href="/css/mapview.css">
   <link rel="stylesheet" href="/css/notifications.css">
   <link rel="stylesheet" href="/css/pikadate.css">
   <link rel="stylesheet" href="/css/rangeslider/css/rangeslider.css">
@@ -417,8 +418,8 @@
         </div>
         <div class="row-events-filters-divider"></div>
         <div class="row-events-filters-group filters-create-meefore">
-          <button class="theme-btn btn-create-event right">
-            <i class="icon icon-bar"></i><span data-lid="e_create_button">Proposer un meefore</span>
+          <button class="theme-btn js-create-event filters__btn-create-event right">
+            <span data-lid="e_create_button">Proposer un meefore</span>
           </button>
         </div>
       </div>
@@ -705,6 +706,7 @@
   <script src="js/src/tpl/lj-render-user-profile.js"></script>
   <script src="js/src/tpl/lj-render-create.js"></script>
   <script src="js/src/tpl/lj-render-event.js"></script>
+  <script src="js/src/tpl/lj-render-mapviews.js"></script>
   <script src="js/src/tpl/lj-render-typeahead.js"></script>
   <script src="js/src/lj-domEvents.js"></script>
   <script src="js/src/events/lj-events-chat.js"></script>
