--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -410,8 +410,8 @@
         </div>
         <div class="row-events-filters-divider"></div>
         <div class="row-events-filters-group filters-create-meefore">
-          <button class="theme-btn btn-create-event right">
-            <i class="icon icon-bar"></i><span data-lid="e_create_button">Proposer un meefore</span>
+          <button class="theme-btn js-create-event filters__btn-create-event right">
+            <span data-lid="e_create_button">Proposer un meefore</span>
           </button>
         </div>
       </div>
