forgot add file

--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -716,6 +716,7 @@
   <script src="js/src/events/lj-events-preview.js"></script>
   <script src="js/src/events/lj-events-tabview.js"></script>
   <script src="js/src/events/lj-events-create.js"></script>
+  <script src="js/src/events/lj-events-mapview.js"></script>
   <script src="js/src/events/lj-events-map.js"></script>
   <script src="js/src/admin/lj-admin.js"></script>
   <script src="js/src/typeaheads/lj-typeaheads.js"></script>
